Wed Mar 31 20:32:27 1999  Steve ROBBINS  <stever@bottom.bic.mni.mcgill.ca (Steve ROBBINS)>

	* fvwm/menus.c (menuShortcuts): removed C++-style comment.

	* acconfig.h (alloca stuff): moved to @BOTTOM@ section, because it
	depends on the definition of HAVE_ALLOCA_H.  Also removed the
	ifndef _GNUC_; nobody knows why we can't include <alloca.h> when
	compiling with gcc.  On the contrary, this file provides a
	prototype for alloca() which is a good thing.

1999-04-01  Tomas Ogren  <stric@ing.umu.se>

	* fvwm/move.c (moveLoop): Fixed typo: window_being_moved ->
	window_being_moved_opaque

1999-04-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress): any modifier works with
	ClickToFocus

	* fvwm/menus.c (menuShortcuts): fixed coredump in multiple hotkeys and
	fixed problem with exactly two identical hotkeys where one was the
	first or last item of the menu

1999-03-31  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm2.1 (ButtonStyle): documented MWMDecorShade

	* fvwm/decorations.c (SelectDecor):
	* fvwm/borders.c (DrawButton):
	* fvwm/screen.h: added a MWMDecorShade button style (looks like max but
	is shown when the mwm hints would show a minimize button)

	* fvwm/builtins.c (Maximize): Unmaximizing a window on the current page
	always maps the window on the current page.
	(ButtonStyle):

	* fvwm/virtual.c (MoveViewport):
	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/move.c (moveLoop): fixed window moving with the outline over
	page borders.

1999-03-31  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm.h: 
	* fvwm/icccm2.c (SetupICCCM2): add parameter replace_wm.
	Don't replace running wm unless replace_wm is nonzero.

	* fvwm/fvwm.c (main): call SetupICCCM2 with a boolean parameter
	which is set if the command line argument "-replace" is given.

	* fvwm/fvwm.c (usage): add -replace, -clientId and -restore. 

	* NEWS:
	* fvwm/fvwm2.1 (ICCCM COMPLIANCE): 
	* fvwm/fvwm2.1 (OPTIONS): document -replace and possible problems.
